LHC-840 restrict code block width to prevent them from overflowing

--- a/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_highlights.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-release-tool/osb-customer-release-tool-web/src/main/css/_highlights.scss
@@ -25,7 +25,7 @@
 }
 
 .lfr-details-column {
-	width: 9%;
+	width: 6%;
 
 	.details {
 		&.importantChanges,
@@ -42,6 +42,10 @@
 		&.knownIssues div.known-issues,
 		&.security div.security {
 			display: block;
+		}
+
+		pre {
+			max-width: 45vw;
 		}
 	}
 }
